--- a/backend/composer.json
+++ b/backend/composer.json
@@ -11,6 +11,7 @@
         }
     ],
     "require": {
-        "firebase/php-jwt": "^6.2"
+        "firebase/php-jwt": "^6.2",
+        "gree/jose": "^2.2"
     }
 }
