--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,14 @@
     "@types/node": "^16.11.35",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
+    "jose": "^4.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "router-dom": "^2.2.9",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
